# xiaozhi-linux

./: .gitignore  CMakeLists.txt  CNAME  README.md  build.sh
conf/: README.md  server.json
control_center/: CMakeLists.txt  Makefile  control_center.cpp  websocket_client.cpp  websocket_client.h
docs/: audio-buffering.md  说明.md
gui/: CMakeLists.txt  Makefile  build.sh  lv_conf.h  toolchain.cmake
gui/lv_100ask_xz_ai/src/: lv_100ask_xz_ai_main.c  ui_system.c
gui/lvgl/src/draw/vg_lite/: lv_draw_vg_lite_label.c
gui/lvgl/src/libs/thorvg/: tvgLottieProperty.h
sound_app/: CMakeLists.txt  Makefile  ipc_udp.cpp  record.cpp  sound_app  sound_app.cpp
